[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Screens/Instance.gd" type="Script" id=1]
[ext_resource path="res://src/Screens/Instance/Banner.gd" type="Script" id=2]
[ext_resource path="res://assets/instance_banner.png" type="Texture" id=3]
[ext_resource path="res://scenes/Screens/Instance/status_style.tres" type="StyleBox" id=4]

[node name="Instance" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )

[node name="Networking" type="Node" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Info" type="MarginContainer" parent="HBoxContainer"]
margin_right = 666.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Panel" type="Panel" parent="HBoxContainer/Info"]
margin_right = 666.0
margin_bottom = 590.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Board" type="VBoxContainer" parent="HBoxContainer/Info/Panel/ScrollContainer"]
margin_right = 666.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Info/Panel/ScrollContainer/Board"]
margin_right = 666.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RulesCont" type="VBoxContainer" parent="HBoxContainer/Info/Panel/ScrollContainer/Board/ScrollContainer"]
margin_right = 666.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Rules" type="Label" parent="HBoxContainer/Info/Panel/ScrollContainer/Board/ScrollContainer/RulesCont"]
margin_right = 666.0
margin_bottom = 48.0
custom_styles/normal = ExtResource( 4 )
text = "
Rules
"
align = 1
valign = 1
autowrap = true

[node name="Thumbnail" type="Panel" parent="HBoxContainer"]
margin_left = 681.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Thumbnail"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Thumbnail/ScrollContainer"]
margin_right = 333.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Banner" type="TextureRect" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_right = 333.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 176 )
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
script = ExtResource( 2 )

[node name="Padding_01" type="MarginContainer" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 333.0
margin_bottom = 185.0
custom_constants/margin_top = 5

[node name="Title" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 333.0
margin_bottom = 203.0
text = "TITLE"
align = 1

[node name="URL" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 333.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0.701961, 0.701961, 0.701961, 1 )
text = "URL"
align = 1

[node name="Padding_02" type="MarginContainer" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 333.0
margin_bottom = 230.0
custom_constants/margin_top = 5

[node name="Description" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 333.0
margin_bottom = 248.0
custom_styles/normal = ExtResource( 4 )
align = 1
valign = 1
autowrap = true

[node name="HBoxContainerTitles" type="HBoxContainer" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 333.0
margin_bottom = 317.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Users" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerTitles"]
margin_right = 111.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Users"
align = 1
valign = 1

[node name="Statuses" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerTitles"]
margin_left = 111.0
margin_right = 222.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Statuses"
align = 1
valign = 1

[node name="Domains" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerTitles"]
margin_left = 222.0
margin_right = 333.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "
Connected
Domains
"
align = 1
valign = 1

[node name="Padding_03" type="MarginContainer" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 333.0
margin_bottom = 326.0
custom_constants/margin_top = 5

[node name="HBoxContainerValues" type="HBoxContainer" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 333.0
margin_bottom = 344.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="UserCount" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerValues"]
margin_right = 111.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/normal = ExtResource( 4 )
align = 1
valign = 1

[node name="StatusCount" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerValues"]
margin_left = 111.0
margin_right = 222.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/normal = ExtResource( 4 )
align = 1
valign = 1

[node name="DomainCount" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer/HBoxContainerValues"]
margin_left = 222.0
margin_right = 333.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/normal = ExtResource( 4 )
align = 1
valign = 1

[node name="Email" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 333.0
margin_bottom = 362.0
align = 1
valign = 1

[node name="Owner" type="Label" parent="HBoxContainer/Thumbnail/ScrollContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 333.0
margin_bottom = 380.0
custom_styles/normal = ExtResource( 4 )
align = 1
valign = 1
